nymea-energy-plugin-consolinno (1.7.08) buster bullseye focal jammy UNRELEASED; urgency=medium
    * Added grid support feature
    * Added support for dyn pricing charging mode 
    * Added support for price threshold in charging configuration
    * Added CLS boolean to relevant compare operations
    * Added CLS boolean to relevant configurations
    * Added fnnstb-plim-server to meta package
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Mon, 01 Jul 2024 14:04:14 +0100

nymea-energy-plugin-consolinno (1.7.06) buster bullseye focal jammy; urgency=medium
    Added multiple intergration plugins to meta package
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Wed, 05 Jun 2024 14:04:14 +0100

nymea-energy-plugin-consolinno (1.7.05-6) buster bullseye focal jammy; urgency=medium
    * Added cigate-modbus-adapter to consolinno-hems package
    * Split up consolinno-hems meta package
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 19 Mar 2024 14:04:14 +0100

nymea-energy-plugin-consolinno (1.7.03-1) buster focal jammy; urgency=medium
    * Added smart washing machine support 
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 23 Jan 2024 09:12:14 +0100

nymea-energy-plugin-consolinno (1.7.02-1) buster focal jammy; urgency=medium
    * Improved ConEMS state
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 28 Nov 2023 09:12:14 +0100

nymea-energy-plugin-consolinno (1.7.002) buster focal jammy; urgency=medium
* New Version for supporting §14a in a EMS 
* HeatPumps are getting deactivated if PLim is bigger than 0
* Wallboxes are limited to PLim but still using PV energy on top
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 12 Jun 2024 08:50:53 +0200

nymea-energy-plugin-consolinno (1.7.001-4) buster focal jammy; urgency=medium
* Turning HeatPumps are getting deactivated if PLim is bigger than 0
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 11 Jun 2024 14:04:53 +0200

nymea-energy-plugin-consolinno (1.7.001-3) buster focal jammy; urgency=medium