@@ -5,6 +5,7 @@ nymea-energy-plugin-consolinno (1.7.08) buster bullseye focal jammy UNRELEASED; 
     * Added CLS boolean to relevant compare operations
     * Added CLS boolean to relevant configurations
     * Added fnnstb-plim-server to meta package
+    * m_consumptionLimit is by default -1
  -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Mon, 01 Jul 2024 14:04:14 +0100
 
 nymea-energy-plugin-consolinno (1.7.06) buster bullseye focal jammy; urgency=medium
